<?xml version="1.0"?>
<package format="2">
  <name>moveit_panda_drawing</name>
  <version>0.0.0</version>
  <description>The moveit_panda_drawing package</description>

  <maintainer email="anil@todo.todo">anil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>

  <export></export>
</package>
